syntax = "proto3";
package sf.v7;

// In this scheme, geometries are structured similarly to GeoJSON geometries.
// Values are stored more efficiently by using integer values, multiplying floating point numbers by a scaling factor to achieve a certain accuracy.
// The default scaling factor is calculated with cm accuracy for its CRS.
// Only the first point per GeoJSON input is considered as absolute points, while the rest of the coordinates are delta values.
// In this version, the coding of attributes IS taken into account by using struct.proto (for dynamic schema)

// with struct.proto, a key is always a string and the value can be: "null", "number", "string", "boolean", "object", "array"
import "google/protobuf/struct.proto";

message Crs {
  uint32 srid = 1;
  uint32 scale = 2; // scaling factor to make int value
}

message CoordinateQ {
    // now stored as integer
  sint32 x = 1;
  sint32 y = 2;
}

enum GeomType {
  GEOM_UNSPECIFIED = 0;
  POINT = 1;
  MULTIPOINT = 2;
  LINESTRING = 3;
  MULTILINESTRING = 4;
  POLYGON = 5;
  MULTIPOLYGON = 6;
}

// one big (flat) array with delta encoding for all coords of the input
message StreamGeometry {
  GeomType type = 1;

  repeated sint32 dxy = 2;            // packed
    // to understand how many coords belong to a geometry
  repeated uint32 part_sizes = 3;     // for the 'multi' geometries
  repeated uint32 poly_ring_counts = 4; // for MultiPolygon
}

message Feature {
  StreamGeometry geometry = 1;

  google.protobuf.Struct properties = 2; // GeoJSON properties
  string id = 3; // feature id (optional)
  repeated double bbox = 4;             // feature bbox (optional)
  google.protobuf.Struct extra = 5;     // other attributes (optional)
}

message FeatureCollection {
  repeated Feature features = 1;
  repeated double bbox = 2;            // featurecollection bbox (optional)
  google.protobuf.Struct extra = 3;    // other attributes (optional)
  string name = 4;                     // featurecollection name (optional)
  Crs crs = 5;                          // featurecollection crs (optional)

  CoordinateQ global_start = 6;        // one absolute start for the whole collection
}

message GeometryCollection {
  repeated StreamGeometry geometries = 1;
  repeated double bbox = 2; // geometrycollection bbox (optional)
  google.protobuf.Struct extra = 3; // other attributes (optional)
  Crs crs = 4; // geometrycollection crs (optional)
  CoordinateQ global_start = 5; // one absolute start for the whole collection
}
